# vibe

./: AI_AGENCY.md  Cargo.toml  DEVELOPMENT_LOG.md  Makefile  README.md  check_pipeline.sh
.github/workflows/: rust.yml
docs/: design_philosophy.md  roadmap.md
docs/architecture/: agent_architecture.mmd  workflow.mmd
scripts/: kind_cluster.sh
src/: main.rs
src/agents/: mod.rs
src/agents/developer/: mod.rs  tests.rs
src/cluster/: tests.rs
tests/: acceptance.rs
tests/acceptance/: mod.rs  test_developer_agent.rs
