[package]
name = "vibe"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
http = "1.0"
hyper = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
