[package]
name = "vibe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
axum = "0.7.9"
tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "1.0.0-rc.4" }
tower = "0.4.13"
tower-http = "0.6.4"
anyhow = "1.0.74"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1.88"
http = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }

[features]
default = []
test = []
