[package]
name = "vibe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.74"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1.88"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }

[features]
default = []
test = []
